--- a/opentech/static_src/src/app/src/components/Tabber/styles.scss
+++ b/opentech/static_src/src/app/src/components/Tabber/styles.scss
@@ -54,6 +54,12 @@
 .tab {
     display: flex;
     flex-direction: column;
-    height: calc(100vh - var(--header-admin-height) -  #{$listing-header-height});
     overflow-y: auto;
+    height: calc(100vh - #{$listing-header-height});
+
+    @include media-query(laptop-short) {
+        // allow for vertical scrolling on laptops
+        height: calc(100vh - var(--header-admin-height) - #{$listing-header-height});
+    }
+
 }
